--- a/styles/style.css
+++ b/styles/style.css
@@ -159,10 +159,23 @@
     }
     .lover{
         flex-direction: column;
-        margin: 20px;
+        margin: 10px;
         gap: 20px;
     }
     .lover h2{
         margin-bottom: 10px;
+    }
+    .Deals{
+        padding: 10px;
+    }
+    .deals-card-container{
+        flex-direction: column;
+        margin: 20px auto;
+    }
+    .deals-card-container h5{
+        font-size: 1.25rem;
+    }
+    .deals-card-container a{
+        font-size: 1rem;
     }
 }
