--- a/styles/style.css
+++ b/styles/style.css
@@ -111,6 +111,8 @@
     justify-items: center;
     align-content: center;
 }
+
+/* join section style */
 .join-section{
     background-image: url(../assets/news-letter-bg.png);
     background-size: cover;
@@ -121,6 +123,7 @@
     flex-direction: column;
     justify-content: center;
     gap: 1.5rem;
+    margin-bottom: 50px;
 }
 .join-content{
     display: flex;
@@ -136,11 +139,27 @@
     padding: 15px 50px;
 }
 
+/* footer related style */
+footer{
+    justify-content: space-between;
+}
+.company{
+    max-width: 360px;
+}
+.manu p{
+    margin-bottom: 2rem;
+}
+.social-link{
+    gap: 20px;
+}
+.social-link img{
+    width: 36px;
+    height: 36px;
+}
 
 
-
+/* responsive for small device */
 @media screen and (max-width: 576px) {
-/* shared style */
     .logo{
         max-width: 4rem;
     }
@@ -208,6 +227,14 @@
         width: 60%;
     }
     .join-section button{
-        padding: 15px;
+        padding: 15px 20px;
+    }
+    footer{
+        flex-direction: column;
+        padding: 20px;
+        gap: 20px;
+    }
+    .manu p{
+    margin-bottom: 1rem;
     }
 }
