--- a/styles/style.css
+++ b/styles/style.css
@@ -24,13 +24,22 @@
     padding: 20px 80px;
     color: white;
 }
+a{  padding: 0 20px;
+    transition: all 0.5s ease;
+}
+a:hover{
+    background-color: #E95A08;
+    padding: 10px 20px;
+    color: white !important;
+    border-radius: 5px;
+}
 
 /* header related style */
 .nav{
     margin: 30px auto;
 }.nav-menu{
     align-items: center;
-    gap: 50px;
+    gap: 20px;
     font-weight: 600;
 }
 .hero{
@@ -162,10 +171,13 @@ footer{
 @media screen and (max-width: 576px) {
     .logo{
         max-width: 4rem;
+        margin-right: -40px;
+        margin-left: 10px;
     }
     .nav{
         margin-top: 20px;
-        justify-content: space-around;
+        justify-content: space-between;
+        gap: 0;
     }
     .nav-item{
         display: none;
@@ -237,4 +249,5 @@ footer{
     .manu p{
     margin-bottom: 1rem;
     }
+
 }
